# Grok-Bevy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROGRESS.md  README.md  map_paths.txt  monitored_paths.txt
.github/workflows/: ci.yml
.grok/skills/bevy-2d-game/: SKILL.md
.grok/skills/bevy-2d-game/references/: 2d-slice.md
.grok/skills/bevy-3d-game/: SKILL.md
.grok/skills/bevy-3d-game/references/: 3d-slice.md
.grok/skills/bevy-agent-loop/: SKILL.md
.grok/skills/bevy-agent-loop/references/: eyesight-packs.md  loop-checklist.md
.grok/skills/bevy-demo-game/: SKILL.md
.grok/skills/bevy-package/: SKILL.md
.grok/skills/bevy-production/: SKILL.md
.grok/skills/bevy-production/references/: layout.md  states-snippet.md
crates/grok-bevy/: Cargo.toml
crates/grok-bevy-brp/: Cargo.toml
crates/grok-bevy-brp/src/: eyesight.rs  lib.rs
crates/grok-bevy-brp/tests/: fixture_capture.rs
crates/grok-bevy-env/: Cargo.toml
crates/grok-bevy-env/src/: lib.rs
crates/grok-bevy/src/: component_paths.rs  launch_plan.rs  main.rs  mcp.rs  scaffold.rs
crates/grok-bevy/tests/: cli_doctor.rs  template_wiring.rs
docs/: AGENT_ASSESSMENT_GROK_BEVY_MCP_UPDATE_2026-07-19.md  AGENT_EYESIGHT_20_20_FINDINGS_2026-07-21.md  AGENT_EYESIGHT_20_20_PLAN.md  AGENT_EYESIGHT_FINDINGS_2026-07-21.md  AGENT_EYESIGHT_PLAN.md  AGENT_SIGHT_2D3D_FINDINGS_2026-07-22.md  AGENT_SIGHT_2D3D_PLAN.md  AGENT_SIGHT_DEBT_FINDINGS_2026-07-23.md  AGENT_SIGHT_DEBT_PLAN.md  AGENT_SIGHT_FIDELITY_FINDINGS_2026-07-23.md  AGENT_SIGHT_FIDELITY_PLAN.md  AGENT_SIGHT_HARDENING_FINDINGS_2026-07-23.md  AGENT_SIGHT_HARDENING_PLAN.md  AGENT_SIGHT_NEXT_FINDINGS_2026-07-21.md  AGENT_SIGHT_NEXT_PLAN.md  ASSET_CONVENTIONS.md  DOGFOOD_REPOS.md  FAST_START.md  GAME_DOD.md  PACKAGING.md  PHYSICS.md  PRODUCTION_GAMES.md  ROADMAP.md  SHIPPING.md  TROUBLESHOOTING.md
docs/images/: README.md
games/demo-2d/: AGENTS.md  Cargo.toml  README.md
games/demo-2d/src/: components.rs  lib.rs  main.rs  resources.rs  states.rs
games/demo-2d/src/plugins/: core.rs  remote.rs
games/demo-2d/src/systems/: gameplay.rs  loading.rs  menu.rs  mod.rs
games/demo-3d/: AGENTS.md  Cargo.toml  README.md
games/demo-3d/src/: components.rs  lib.rs  main.rs  resources.rs  states.rs
games/demo-3d/src/plugins/: core.rs  remote.rs
games/demo-3d/src/systems/: end_screens.rs  gameplay.rs  loading.rs  menu.rs  mod.rs
scripts/: check_sprite_transparency.py  package-demo.sh
templates/game-2d/: AGENTS.md  Cargo.toml  README.md
templates/game-2d/src/: components.rs  lib.rs  main.rs  resources.rs  states.rs
templates/game-2d/src/plugins/: core.rs  mod.rs
templates/game-2d/src/systems/: end_screens.rs  gameplay.rs  loading.rs  menu.rs
templates/game-3d/: AGENTS.md  Cargo.toml  README.md
templates/game-3d/src/: components.rs  lib.rs  main.rs  resources.rs  states.rs
templates/game-3d/src/plugins/: core.rs
templates/game-3d/src/systems/: gameplay.rs  loading.rs  menu.rs  mod.rs
templates/sample-app/: Cargo.toml  README.md
templates/sample-app/src/: main.rs
