[workspace]
resolver = "2"
members = [
    "crates/grok-bevy-env",
    "crates/grok-bevy-brp",
    "crates/grok-bevy",
    "templates/sample-app",
    "games/demo-2d",
    "games/demo-3d",
]
default-members = [
    "crates/grok-bevy-env",
    "crates/grok-bevy-brp",
    "crates/grok-bevy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/IronAdamant/Grok-Bevy"
authors = ["Grok-Bevy contributors"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
grok-bevy-brp = { path = "crates/grok-bevy-brp", version = "0.1.0" }
grok-bevy-env = { path = "crates/grok-bevy-env", version = "0.1.0" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "process", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7"

# Pinned ecosystem versions (Bevy 0.19 track)
bevy = { version = "0.19", default-features = true }
bevy_brp_extras = "0.22.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
