[package]
name = "grok-bevy-brp"
description = "Bevy Remote Protocol HTTP client and visual capture helpers for Grok-Bevy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
png = "0.17"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
