[package]
name = "grok-bevy-env"
description = "Cross-platform environment detection and readiness checks for Bevy development"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = "3"
