[package]
name = "grok-bevy"
description = "CLI and MCP server for Grok Build agents to control Bevy at runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
default-run = "grok-bevy"

[[bin]]
name = "grok-bevy"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
grok-bevy-brp = { workspace = true }
grok-bevy-env = { workspace = true }
include_dir = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = "3"
