[package]
name = "__PACKAGE_NAME__"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "Grok-Bevy production 3D game starter (playable vertical slice)"

[dependencies]
bevy = { version = "0.19", default-features = true, features = ["png"] }
bevy_brp_extras = { version = "0.22.1", optional = true }

[features]
default = []
remote = ["dep:bevy_brp_extras", "bevy/bevy_remote"]
capture = ["remote"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
