[package]
name = "grok_bevy_sample"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "Grok-Bevy sample Bevy app with RemotePlugin / capture feature flags"

[dependencies]
bevy = { workspace = true, features = ["png"] }
bevy_brp_extras = { workspace = true, optional = true }

[features]
default = []
# BRP HTTP server via bevy_brp_extras (RemotePlugin + RemoteHttpPlugin on port 15702).
remote = ["dep:bevy_brp_extras", "bevy/bevy_remote"]
# Visual capture + diagnostics (implies remote).
capture = ["remote"]

[[bin]]
name = "grok_bevy_sample"
path = "src/main.rs"

[[bin]]
name = "brp_headless"
path = "src/bin/brp_headless.rs"
required-features = ["remote"]
